# joho

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.engine  Dockerfile.gateway  README.md  docker-compose.yml
dense/: README.md  common.py  dense_search.py  embed.py  fuse_rrf.py  requirements.txt  rerank.py  setup_env.sh
deploy/: 00_setup_gcp.sh  10_deploy_cloudrun.sh  20_gcs_sync.sh  30_vm_job.sh  README.md  entrypoint_combined.sh  env.sh  marco_job.sh
deploy/aws/: 00_setup_aws.sh  10_ec2_job.sh  20_s3_sync.sh  99_teardown_aws.sh  README.md  demo_ec2.sh  env.sh  marco_job.sh  marco_rerank_job.sh  marco_wand_job.sh
engine/: CMakeLists.txt  README.md
engine/include/joho/: bm25.hpp  corpus.hpp  disk_index.hpp  index_reader.hpp  inverted_index.hpp  sharded_searcher.hpp  suggest_index.hpp  symspell.hpp  tokenizer.hpp  trie.hpp  varint.hpp
engine/src/: batch.cpp  bm25.cpp  build_index.cpp  corpus.cpp  disk_index.cpp  inverted_index.cpp  main.cpp  server.cpp  shard_search.cpp  sharded_searcher.cpp  suggest.cpp  suggest_index.cpp  symspell.cpp  tokenizer.cpp  trie.cpp
engine/tests/: test_symspell.cpp  test_trie.cpp  test_varint.cpp
eval/: README.md  evaluate.py  export_dataset.py  requirements.txt  run_eval.py  setup_env.sh
gateway/: README.md  app.py  config.py  engine_client.py  requirements.txt  retrieval.py  setup_env.sh
proto/: joho.proto
scripts/: gen_proto.sh
web/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: SearchBox.tsx  WhyPanel.tsx
web/lib/: api.ts
